plans api swagger docs
